terraform/manifests/nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: nginx
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: 927765134734.dkr.ecr.us-east-1.amazonaws.com/k3s-p9-ecr/docker/library/nginx
    resources:
      limits:
        memory: "48Mi"
        cpu: "100m"
    ports:
    - containerPort: 80
    volumeMounts:
        - name: nginx
          mountPath: /usr/share/nginx/html/
  restartPolicy: Never
  tolerations:
    - operator: "Exists"
  volumes:
  - name: nginx
    configMap:
      name: nginx
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: nginx
spec:
  selector:
    app: nginx
  ports:
  - name: http
    port: 30080
    targetPort: 80
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: nginx
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "public80"
spec:
  rules:
    - http:
        paths:
          - path: /.*
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 30080
